--- a/basic-host-remote/app2/package.json
+++ b/basic-host-remote/app2/package.json
@@ -5,12 +5,14 @@
   "devDependencies": {
     "@babel/core": "7.13.15",
     "@babel/preset-react": "7.13.13",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-beta.7",
     "babel-loader": "8.2.2",
-    "html-webpack-plugin": "4.5.1",
+    "html-webpack-plugin": "5.3.1",
+    "react-refresh": "^0.10.0",
     "serve": "11.3.2",
-    "webpack": "5.18.0",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack": "5.37.0",
+    "webpack-cli": "4.7.0",
+    "webpack-dev-server": "^4.0.0-beta.3"
   },
   "scripts": {
     "start": "webpack-cli serve",
